<?xml version="1.0" encoding="utf-8"?>
<!--
 *
 *            DO WHAT THE FUCK YOU WANT TO PUBLIC LICENSE 
 *                    Version 2, December 2004 
 *
 * Copyright (C) 2004 Sam Hocevar <sam@hocevar.net> 
 *
 * Everyone is permitted to copy and distribute verbatim or modified 
 * copies of this license document, and changing it is allowed as long 
 * as the name is changed. 
 *
 *            DO WHAT THE FUCK YOU WANT TO PUBLIC LICENSE 
 *   TERMS AND CONDITIONS FOR COPYING, DISTRIBUTION AND MODIFICATION 
 *
 *  0. You just DO WHAT THE FUCK YOU WANT TO. 
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- General application strings -->
    <string name="app_name">Preferences Examples</string>
    <string name="main_title_head">PrefExamples</string>

    <!-- Category titles -->
    <string name="edit_text_cat_title">EditTextPreference category</string>
    <string name="list_cat_title">ListPreference category</string>
    <string name="checkbox_cat_title">CheckBoxPreference category</string>
    <string name="icon_cat_title">PreferenceScreen w/icon category</string>

    <!-- EditTextPreference -->
    <string name="pref_edit_text_title">EditTextPreference title</string>
    <string name="pref_edit_text_summary">EditTextPreference summary</string>
    <string name="pref_edit_text_default">Default Value</string>
    <string name="pref_edit_text_dialogTitle">dialog title text</string>
    <string name="pref_edit_text_hint">Ghostly hint</string>

    <!-- ListPreference -->
    <string name="pref_list_title">ListPreference title</string>
    <string name="pref_list_summary">ListPreference summary</string>
    <string name="pref_list_dialogTitle">dialog title text</string>

    <!-- CheckBoxPreference -->
    <string name="pref_checkbox_title">CheckBox title</string>
    <!-- use these to tell your users what to expect when the click -->
    <string name="pref_checkbox_summaryOff">summaryOff displayed when unchecked</string>
    <string name="pref_checkbox_summaryOn">summaryOn displayed when checked</string>

    <!-- PreferenceScreen with icon -->
    <string name="pref_icon_title">PreferenceScreen w/icon</string>
    <string name="pref_icon_summary">Enough talk show me the code</string>

</resources>
